// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconPhone should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-phone "
  height={14}
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    d="M2.8 6.067c1.089 2.177 2.956 3.966 5.133 5.133l1.711-1.711c.234-.233.545-.311.778-.156.856.311 1.79.467 2.8.467.467 0 .778.311.778.778v2.644c0 .467-.311.778-.778.778C5.912 14 0 8.089 0 .778 0 .31.311 0 .778 0H3.5c.467 0 .778.311.778.778 0 .933.155 1.866.466 2.8.078.233 0 .544-.155.778L2.8 6.066z"
    fill="#000"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPhone should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-phone test"
  height={150}
  title="title"
  viewBox="0 0 14 14"
  width={160}
>
  <path
    className="fill-color"
    d="M2.8 6.067c1.089 2.177 2.956 3.966 5.133 5.133l1.711-1.711c.234-.233.545-.311.778-.156.856.311 1.79.467 2.8.467.467 0 .778.311.778.778v2.644c0 .467-.311.778-.778.778C5.912 14 0 8.089 0 .778 0 .31.311 0 .778 0H3.5c.467 0 .778.311.778.778 0 .933.155 1.866.466 2.8.078.233 0 .544-.155.778L2.8 6.066z"
    fill="#000"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;
